--- a/public/css/extra_style.css
+++ b/public/css/extra_style.css
@@ -1,3 +1,29 @@
 .modal-lg {
     max-width: 85%;
 }
+
+.swal-icon--warning {
+    border-color: #228b22;
+    -webkit-animation: pulseWarning .75s infinite alternate;
+    animation: pulseWarning .75s infinite alternate;
+}
+
+
+.swal-icon--warning__body, .swal-icon--warning__dot{
+    position: absolute;
+    left: 50%;
+    background-color: #2e3192;
+}
+
+.swal-button,.swal-button--confirm {
+    background-color: #228b22;
+    color: #fff;
+    border: none;
+    box-shadow: none;
+    border-radius: 5px;
+    font-weight: 600;
+    font-size: 14px;
+    padding: 10px 24px;
+    margin: 0;
+    cursor: pointer;
+}
